--- a/RedDwarfAnalysis.fsproj
+++ b/RedDwarfAnalysis.fsproj
@@ -74,6 +74,10 @@
       <HintPath>packages\FSharp.Charting.0.90.14\lib\net40\FSharp.Charting.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="FSharp.Core">
+      <HintPath>packages\FSharp.Core.3.1.2.5\lib\net40\FSharp.Core.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="FSharp.Data">
       <HintPath>packages\FSharp.Data.2.3.2\lib\net40\FSharp.Data.dll</HintPath>
       <Private>True</Private>
@@ -82,10 +86,15 @@
       <HintPath>packages\Google.DataTable.Net.Wrapper.3.1.2.0\lib\Google.DataTable.Net.Wrapper.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="mscorlib" />
-    <Reference Include="FSharp.Core, Version=$(TargetFSharpCoreVersion), Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <Reference Include="MathNet.Numerics">
+      <HintPath>packages\MathNet.Numerics.3.17.0\lib\net40\MathNet.Numerics.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="MathNet.Numerics.FSharp">
+      <HintPath>packages\MathNet.Numerics.FSharp.3.17.0\lib\net40\MathNet.Numerics.FSharp.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="mscorlib" />
     <Reference Include="Newtonsoft.Json">
       <HintPath>packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
@@ -100,6 +109,10 @@
     </Reference>
     <Reference Include="XPlot.GoogleCharts.WPF">
       <HintPath>packages\XPlot.GoogleCharts.WPF.1.3.0\lib\net45\XPlot.GoogleCharts.WPF.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="XPlot.Plotly">
+      <HintPath>packages\XPlot.Plotly.1.4.2\lib\net45\XPlot.Plotly.dll</HintPath>
       <Private>True</Private>
     </Reference>
   </ItemGroup>
