--- a/packages.config
+++ b/packages.config
@@ -2,9 +2,13 @@
 <packages>
   <package id="FParsec" version="1.0.2" targetFramework="net452" />
   <package id="FSharp.Charting" version="0.90.14" targetFramework="net452" />
+  <package id="FSharp.Core" version="3.1.2.5" targetFramework="net452" />
   <package id="FSharp.Data" version="2.3.2" targetFramework="net452" />
   <package id="Google.DataTable.Net.Wrapper" version="3.1.2.0" targetFramework="net452" />
+  <package id="MathNet.Numerics" version="3.17.0" targetFramework="net452" />
+  <package id="MathNet.Numerics.FSharp" version="3.17.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
   <package id="XPlot.GoogleCharts" version="1.4.2" targetFramework="net452" />
   <package id="XPlot.GoogleCharts.WPF" version="1.3.0" targetFramework="net452" />
+  <package id="XPlot.Plotly" version="1.4.2" targetFramework="net452" />
 </packages>
